Use profile image url instead of animated thumbnail gif for meta tag images.

--- a/_layouts/workout.html
+++ b/_layouts/workout.html
@@ -11,11 +11,11 @@
     <meta name="author" content="@{{ page.workout.author.instagramHandle }} ({{ page.workout.author.profileDescription}})" />
     <meta property="og:title" content="{{page.workout.name}} from @{{page.workout.author.instagramHandle}}">
     <meta property="og:description" content="{{page.workout.description}}">
-    <meta property="og:image" content="{{page.workout.thumbnail}}">
+    <meta property="og:image" content="{{page.workout.author.profileImageUrl}}">
     <meta property="og:url" content="https://verkout.com/workouts/{{page.workout.id}}">
     <meta name="twitter:title" content="{{page.workout.name}} from @{{page.workout.author.instagramHandle}}">
     <meta name="twitter:description" content="{{page.workout.description}}">
-    <meta name="twitter:image" content="{{page.workout.thumbnail}}">
+    <meta name="twitter:image" content="{{page.workout.author.profileImageUrl}}">
     <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
