--- a/_layouts/workout.html
+++ b/_layouts/workout.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="{{page.workout.name}} from @{{page.workout.author.instagramHandle}}">
     <meta property="og:description" content="{{page.workout.description}}">
     <meta property="og:image" content="{{page.workout.author.profileImageUrl}}">
-    <meta property="og:url" content="https://verkout.com/workouts/{{page.workout.id}}">
+    <meta property="og:url" content="https://www.verkout.com/workouts/{{page.workout.id}}">
     <meta name="twitter:title" content="{{page.workout.name}} from @{{page.workout.author.instagramHandle}}">
     <meta name="twitter:description" content="{{page.workout.description}}">
     <meta name="twitter:image" content="{{page.workout.author.profileImageUrl}}">
