--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -61,8 +61,24 @@ $colorTranslucentWhiteHeavy: rgba(255, 255, 255, 0.7);
 }
 
 #workout section.description {
-  position: absolute;
-  width: 100%;
-  top: 80%;
-  left: 0;
+  padding-top: 1rem;
+}
+
+#workout a {
+  text-decoration: none;
+  color: $colorTranslucentWhiteHeavy;
+}
+
+.video-js .vjs-big-play-button {
+  left: 40%;
+  top: 45%;
+  width: 20%;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  margin-right: 0.5rem;
 }
