--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -46,6 +46,8 @@ $colorTranslucentWhiteHeavy: rgba(255, 255, 255, 0.7);
 
 .inset h4 {
   color: $colorGold;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .inset h5 {
